Docker-files and docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,10 @@
 version: '3.8'
 services:
   vprodb:
-    image: vprocontainers/vprofiledb
+    build:
+      context: ./Docker-files/db
+    image: kubekaus/vprofiledb
+    container_name: vprodb
     ports:
       - "3306:3306"
     volumes:
@@ -13,7 +16,7 @@ services:
     image: memcached
     ports:
       - "11211:11211"
-
+  
   vpromq01:
     image: rabbitmq
     ports:
@@ -22,17 +25,24 @@ services:
       - RABBITMQ_DEFAULT_USER=guest
       - RABBITMQ_DEFAULT_PASS=guest
 
-  vproapp:
-    image: vprocontainers/vprofileapp
+  vprodapp:
+    build:
+      context: ./Docker-files/app
+    image: kubekaus/vprofileapp
+    container_name: vproapp
     ports:
       - "8080:8080"
-    volumes: 
+    volumes:
       - vproappdata:/usr/local/tomcat/webapps
-
-  vproweb:
-    image: vprocontainers/vprofileweb
+  
+  vprodweb:
+    build:
+      context: ./Docker-files/web
+    image: kubekaus/vprofileweb
+    container_name: vproweb
     ports:
       - "80:80"
+
 volumes:
-  vprodbdata: {}
-  vproappdata: {}
+    vprodbdata: {}
+    vproappdata: {}
